# TM-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
bot/: celery.py  config.py  exceptions.py  handlers.py  keyboards.py  main.py  tasks.py  templates.py
bot/templates/: messages.j2
tests/: test_bot.py
